manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    name: voting-app
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/managed-by: argocd
